--- a/.github/workflows/kernel.yml
+++ b/.github/workflows/kernel.yml
@@ -80,7 +80,7 @@ jobs:
     - name: Download kernel source
       run: |
         cd $GITHUB_WORKSPACE/kernel_workspace
-        git clone https://gitlab.com/MT6768Lab/KernelTree.git -b 13 android-kernel --depth=1
+        git clone https://gitlab.com/MT6768Lab/KernelTree.git -b 13 android-kernel 
         if [[ ${{ env.ADD_LOCALVERSION_TO_FILENAME }} == 'true' ]]; then
           echo "LOCALVERSION=$(cat android-kernel/localversion)" >> $GITHUB_ENV
         else
