Add git configs

--- a/.github/workflows/kernel.yml
+++ b/.github/workflows/kernel.yml
@@ -102,6 +102,8 @@ jobs:
     - name: Setup Configuration for Kernel
       run: |
         cd $GITHUB_WORKSPACE/kernel_workspace/android-kernel
+        git config --global user.email "burhanverse@gmail.com"
+        git config --global user.name "Aqua"
         git revert --no-edit b23b0e7bcaf7c39c0925e65b12b8b50815d90b94
         if [ ${{ env.DISABLE-LTO }} = true ]; then
             sed -i 's/^CONFIG_LOCALVERSION=".*"/CONFIG_LOCALVERSION="-BlackSapphire"/' arch/${{ env.ARCH }}/configs/${{ env.KERNEL_CONFIG }}
