--- a/.github/workflows/kernel.yml
+++ b/.github/workflows/kernel.yml
@@ -80,7 +80,7 @@ jobs:
     - name: Download kernel source
       run: |
         cd $GITHUB_WORKSPACE/kernel_workspace
-        git clone https://gitlab.com/MT6768Lab/KernelTree.git -b 14 android-kernel --depth=1
+        git clone https://gitlab.com/MT6768Lab/KernelTree.git -b 14 android-kernel
         if [[ ${{ env.ADD_LOCALVERSION_TO_FILENAME }} == 'true' ]]; then
           echo "LOCALVERSION=$(cat android-kernel/localversion)" >> $GITHUB_ENV
         else
@@ -102,6 +102,9 @@ jobs:
     - name: Setup Configuration for Kernel
       run: |
         cd $GITHUB_WORKSPACE/kernel_workspace/android-kernel
+        git config --global user.email "burhanverse@gmail.com"
+        git config --global user.name "Aqua"
+        git revert --no-edit b23b0e7bcaf7c39c0925e65b12b8b50815d90b94
         if [ ${{ env.DISABLE-LTO }} = true ]; then
             sed -i 's/^CONFIG_LOCALVERSION=".*"/CONFIG_LOCALVERSION="-BlackSapphire"/' arch/${{ env.ARCH }}/configs/${{ env.KERNEL_CONFIG }}
             sed -i 's/CONFIG_LTO=y/CONFIG_LTO=n/' arch/${{ env.ARCH }}/configs/${{ env.KERNEL_CONFIG }}
